[metadata]
name = aioarping
author = François Wautier
author_email = francois@wautier.eu
license = MIT
description = API for arping over a LAN with asyncio.
long_description = file: README.md
keywords = arp, mac address, presence, automation
url = http://github.com/frawau/aioarping
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
packages = aioarping
install_requires = ipaddress

[options.extras_require]
utils = routeparser
cli = aioarping[utils]

